--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,31 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@700&display=swap');
 
-*{
-  margin:0px;
+* {
+  margin: 0px;
   font-family: 'Baloo Tammudu 2', cursive;
   box-sizing: border-box;
   padding: 0px;
 }
-html{
+
+html {}
+
+body {
+  background: url("./img/patitas.png");
+  object-fit: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
 }
 
-body{
-background: url("./img/patitas.png");
-object-fit: cover;
-background-attachment: fixed;
-width: 100%;
-height:100%;
-}
-
-input, button {
+input,
+button {
   /* border: none; */
   margin: 2%;
   text-align: center;
 }
-button{
-  background-color:rgba(131, 89, 227, 1);
+
+button {
+  background-color: rgba(131, 89, 227, 1);
   width: 250px;
   height: 43px;
   background: #8359E3;
@@ -36,9 +37,17 @@ button{
   text-align: center;
   cursor: pointer;
   padding-top: 8px;
+  font-size: 15px;
 }
 
-#register-email, #register-password,#register-password2, #register-name, #pet-name, #specie-name, #email,#password {
+#register-email,
+#register-password,
+#register-password2,
+#register-name,
+#pet-name,
+#specie-name,
+#email,
+#password {
   text-align: left;
   border-radius: 25px;
   margin-bottom: 4px;
@@ -46,25 +55,28 @@ button{
   width: 250px;
   border: none;
   background-color: aliceblue;
-  color:rgb(73, 72, 72);
-  padding:10px 2px 10px 5% ;
+  color: rgb(73, 72, 72);
+  padding: 10px 2px 10px 5%;
   font-family: Arial, Helvetica, sans-serif;
   /* width: 15em; */
-  /* background-position: 58vw */;
+  /* background-position: 58vw */
+  ;
 }
+
 /* Botón registrarse */
-#create-account{
+#create-account {
   margin-top: 7%;
 }
+
 /* contenedor blanco*/
-.register-container{
+.register-container {
   display: flex;
   align-items: left;
   flex-direction: column;
   justify-content: center;
   background-color: white;
-  height:fit-content;
-  width:fit-content;
+  height: fit-content;
+  width: fit-content;
   position: absolute;
   padding: 20px;
   top: 50%;
@@ -73,13 +85,16 @@ button{
   border-radius: 25px;
   box-shadow: 0px 30px 30px rgba(92, 92, 92, 0.479);
 }
-h1{
+
+h1 {
   margin-top: 0px;
   text-align: cente
 }
-p, a{
+
+p,
+a {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10px;
+  font-size: 12px;
   margin-top: 10px;
   text-align: center;
 }
@@ -96,15 +111,17 @@ header {
   height: 20px;
   margin-left: -5px;
 }
-#welcome{
-color: #8359E3;
+
+#welcome {
+  color: #8359E3;
 }
-#google{
+
+#google {
   width: 100%;
   margin-right: -120px;
   text-align: center;
   align-items: center;
-  transform: translate(3px,20px);
+  transform: translate(3px, 10px);
   cursor: pointer;
   margin-bottom: 20px;
   border-style: solid;
@@ -119,14 +136,14 @@ a {
 /* .feed-container{
   ds
 } */
-.timeline{
+.timeline {
   display: flex;
   align-items: left;
   flex-direction: column;
   justify-content: center;
   background-color: white;
-  height:fit-content;
-  width:fit-content;
+  height: fit-content;
+  width: fit-content;
   position: absolute;
   padding: 30px;
   padding-bottom: 5px;
@@ -138,24 +155,25 @@ a {
   /* box-shadow: 0px 30px 30px rgba(92, 92, 92, 0.479); */
 }
 
-#head-feed{
+#head-feed {}
 
-}
-
-#status-description{
+#status-description {
   width: 250px;
   height: 50px;
   height: fit-content;
   font-family: Arial, Helvetica, sans-serif;
-  border:none;
+  border: none;
   outline: none;
   overflow: auto;
-  resize:none;
+  resize: none;
 }
-::placeholder { color: rgb(196, 196, 196); }
 
-.post{
-  background-color:rgba(131, 89, 227, 1);
+::placeholder {
+  color: rgb(196, 196, 196);
+}
+
+.post {
+  background-color: rgba(131, 89, 227, 1);
   width: 100px;
   height: 30px;
   background: #8359E3;
