--- a/src/style.css
+++ b/src/style.css
@@ -36,8 +36,11 @@ button {
   align-items: center;
   text-align: center;
   cursor: pointer;
-  padding-top: 8px;
   font-size: 15px;
+}
+
+#signin-button{
+  padding-top: 8px;
 }
 
 #register-email,
@@ -66,6 +69,11 @@ button {
 /* Botón registrarse */
 #create-account {
   margin-top: 7%;
+  padding-top: 8px;
+}
+
+#back-button {
+  padding-top: 8px;
 }
 
 /* contenedor blanco*/
@@ -79,7 +87,7 @@ button {
   width: fit-content;
   position: absolute;
   padding: 20px;
-  top: 50%;
+  top: 53%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 25px;
@@ -88,7 +96,12 @@ button {
 
 h1 {
   margin-top: 0px;
-  text-align: cente
+  transform: translate(10px, 10px);
+}
+
+h2 {
+  transform: translate(3px, 0px);
+  font-size: 14px;
 }
 
 p,
@@ -145,12 +158,12 @@ a {
   height: fit-content;
   width: fit-content;
   position: absolute;
-  padding: 30px;
+  padding: 25px;
   padding-bottom: 5px;
-  top: 50%;
+  top: 24%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 25px;
+  border-radius: 10px;
   overflow: auto;
   /* box-shadow: 0px 30px 30px rgba(92, 92, 92, 0.479); */
 }
@@ -159,7 +172,6 @@ a {
 
 #status-description {
   width: 250px;
-  height: 50px;
   height: fit-content;
   font-family: Arial, Helvetica, sans-serif;
   border: none;
@@ -172,15 +184,64 @@ a {
   color: rgb(196, 196, 196);
 }
 
+#salir {
+  position: absolute;
+  top: 50px;
+  right: 25px;
+}
+
 .post {
   background-color: rgba(131, 89, 227, 1);
   width: 100px;
   height: 30px;
   background: #8359E3;
-  box-shadow: 0px 30px 30px rgba(69, 42, 124, 0.15);
+  box-shadow: 0px 10px 10px rgba(69, 42, 124, 0.15);
   border-radius: 30px;
   color: white;
   border: none;
-  margin-left: 130px;
+  margin-left: 243px;
+  margin-top: 150px;
   cursor: pointer;
+}
+
+#posts-container {
+  justify-content: center;
+  align-items: center;
+  margin-left: 40px;
+}
+
+
+.eachPost {
+  /* align-items: left; */
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
+  height: fit-content;
+  width: 300px;
+  padding-top: 10px;
+  /* position: absolute; */
+  /* padding: 30px;
+  padding-bottom: 5px; */
+  /*  top: 50%;
+  left: 50%; */
+  /* transform: translate(-%, 180%); */
+  border-radius: 10px;
+  margin: 10px 0 10px 0;
+  /* overflow: auto; */
+}
+
+p1 {
+  font-size: 14px;
+  margin-left: 30px;
+}
+
+p3 {
+  font-size: 12px;
+  margin-left: 30px;
+}
+
+#like {
+  margin-left: -220px;
+  cursor: pointer;
+  margin-bottom: 10px;
 }
