--- a/src/style.css
+++ b/src/style.css
@@ -100,7 +100,7 @@ h1 {
 }
 
 h2 {
-  transform: translate(3px, 0px);
+  transform: translate(0px, 0px);
   font-size: 14px;
 }
 
@@ -185,63 +185,72 @@ a {
 }
 
 #salir {
-  position: absolute;
-  top: 50px;
-  right: 25px;
+  margin-right: -280px;
+  transform: translate(3px, -18px);
+  cursor: pointer;
 }
 
 .post {
   background-color: rgba(131, 89, 227, 1);
   width: 100px;
-  height: 30px;
+  height: 35px;
   background: #8359E3;
   box-shadow: 0px 10px 10px rgba(69, 42, 124, 0.15);
   border-radius: 30px;
-  color: white;
-  border: none;
-  margin-left: 243px;
-  margin-top: 150px;
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 36%;
+  left: 50%;
+  transform: translate(51%, -50%);
+  margin: 0px;
+  padding-top: 7px;
 }
 
 #posts-container {
   justify-content: center;
   align-items: center;
-  margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, 4%);
+  margin: 0px;
+  padding-top: 7px
 }
 
 
 .eachPost {
-  /* align-items: left; */
-  flex-direction: column;
-  justify-content: center;
   background-color: white;
-  height: fit-content;
+  height: 100px;
   width: 300px;
   padding-top: 10px;
-  /* position: absolute; */
-  /* padding: 30px;
-  padding-bottom: 5px; */
-  /*  top: 50%;
-  left: 50%; */
-  /* transform: translate(-%, 180%); */
   border-radius: 10px;
   margin: 10px 0 10px 0;
-  /* overflow: auto; */
 }
 
 p1 {
   font-size: 14px;
   margin-left: 30px;
+  display: block;
+  margin-top: 5px;
+  margin-right: 0px;
 }
 
 p3 {
   font-size: 12px;
   margin-left: 30px;
+  display: block;
 }
 
-#like {
-  margin-left: -220px;
+.like {
+  background: url("./img/like.png");
+  background-repeat:no-repeat;
+  padding: 10px;
+  margin-left: 30px;
+  background-position:center;
   cursor: pointer;
-  margin-bottom: 10px;
 }
