--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,11 @@ body {
 
 input,
 button {
-  /* border: none; */
-  margin: 2%;
+  border-color: #8359E3;
+  border-radius: 10px;
+  margin: 1%;
   text-align: center;
+  margin-left: 65px;
 }
 
 button {
@@ -217,7 +219,7 @@ a {
   position: absolute;
   top: 30%;
   left: 50%;
-  transform: translate(-50%, 4%);
+  transform: translate(-50%, 3%);
   margin: 0px;
   padding-top: 7px
 }
@@ -225,7 +227,7 @@ a {
 
 .eachPost {
   background-color: white;
-  height: 100px;
+  height: fit-content;
   width: 300px;
   padding-top: 10px;
   border-radius: 10px;
@@ -254,3 +256,37 @@ p3 {
   background-position:center;
   cursor: pointer;
 }
+
+.update-btn{
+  background: url(./img/editar.png);
+  background-repeat:no-repeat;
+  padding: 10px;
+  margin-left: 10px;
+  background-position:center;
+  cursor: pointer; 
+}
+.delete-btn{
+  background: url(./img/eliminar.png);
+  background-repeat:no-repeat;
+  padding: 10px;
+  margin-left: 190px;
+  background-position:center;
+  cursor: pointer; 
+}
+
+.save-btn {
+  font-size: 10px;
+  width: 50px;
+  height: 20px;
+  padding-top:1px;
+  margin-left: 100px;
+}
+
+.cancel-btn{
+  font-size: 10px;
+  width: 50px;
+  height: 20px;
+  padding-top:1px;
+  margin-left: 10px;
+}
+
