--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,6 @@
   padding: 0px;
 }
 
-html {}
 
 body {
   background: url("./img/patitas.png");
@@ -169,8 +168,6 @@ a {
   /* box-shadow: 0px 30px 30px rgba(92, 92, 92, 0.479); */
 }
 
-#head-feed {}
-
 #status-description {
   width: 250px;
   height: fit-content;
@@ -218,7 +215,7 @@ a {
   position: absolute;
   top: 30%;
   left: 50%;
-  transform: translate(-50%, 3%);
+  transform: translate(-50%, 6%);
   margin: 0px;
   padding-top: 7px
 }
@@ -241,6 +238,11 @@ p1 {
   margin-right: 0px;
 }
 
+p2{
+  width: 10px;
+  height: 5px;
+}
+
 p3 {
   font-size: 12px;
   margin-left: 30px;
@@ -248,12 +250,26 @@ p3 {
 }
 
 .like {
+  background: url("./img/dislike.png");
+  background-repeat:no-repeat;
+  padding: 10px;
+  margin-left: 30px;
+  background-position:center;
+  cursor: pointer;
+}
+
+.disLike {
   background: url("./img/like.png");
   background-repeat:no-repeat;
   padding: 10px;
   margin-left: 30px;
   background-position:center;
   cursor: pointer;
+}
+
+.counter-input{
+  margin-left: 10px;
+  font-size: 12px;
 }
 
 .update-btn{
@@ -268,7 +284,7 @@ p3 {
   background: url(./img/eliminar.png);
   background-repeat:no-repeat;
   padding: 10px;
-  margin-left: 190px;
+  margin-left: 170px;
   background-position:center;
   cursor: pointer; 
 }
